# OpenMP-BLAS

./: .gitignore  CMakeLists.txt  README.md
cmake/: Blis.cmake  Boost.cmake  CompilerArchSettings.cmake  Conan.cmake  Eigen.cmake  MKL.cmake  Matplot.cmake  OpenBlas.cmake  OpenMP.cmake
doc/: inner_product.tex  intro.tex  main.tex  matrix_times_matrix.tex  matrix_times_vector.tex  matrix_transpose.tex  outer_product.tex  references.bib
include/: aligned_buff.hpp  benchmark.hpp  cache_manager.hpp  cache_manger.hpp  cpuinfo.hpp  dot.hpp  el_wise_op.hpp  macros.hpp  metric.hpp  mtm.hpp  mtm_old.hpp  mtv.hpp  openblas.hpp  outer.hpp  range.hpp  simd_loop.hpp  thread_utils.hpp  timer.hpp  trans.hpp  utils.hpp
src/: CMakeLists.txt  dot.cpp  dot_tuning.cpp  el_wise_op.cpp  main.cpp  mtm.cpp  mtv.cpp  outer.cpp  src_list.cmake  trans.cpp
test/: CMakeLists.txt  dot_prod.cpp  test.dot_prod.cpp  test.mtm.cpp  test.mtv.cpp  test.outer_prod.cpp  test.pack.cpp  test.trans.cpp  test.vtm.cpp  test_list.cmake  test_utils.hpp
